[gd_scene load_steps=19 format=2]

[ext_resource path="res://Components/Rogue.tscn" type="PackedScene" id=1]
[ext_resource path="res://Components/Mage.tscn" type="PackedScene" id=2]
[ext_resource path="res://Components/Barbarian.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/meshlibrary.tres" type="MeshLibrary" id=4]
[ext_resource path="res://Components/CharacterSelector.gd" type="Script" id=5]
[ext_resource path="res://Resources/gui_theme.tres" type="Theme" id=6]
[ext_resource path="res://Assets/DungeonKit/pots.obj" type="ArrayMesh" id=7]
[ext_resource path="res://Assets/DungeonKit/bookcaseFilled.obj" type="ArrayMesh" id=8]
[ext_resource path="res://Assets/DungeonKit/potA_decorated.obj" type="ArrayMesh" id=9]
[ext_resource path="res://Assets/DungeonKit/chair.obj" type="ArrayMesh" id=10]
[ext_resource path="res://Assets/DungeonKit/potB_decorated.obj" type="ArrayMesh" id=11]
[ext_resource path="res://Assets/DungeonKit/tableMedium.obj" type="ArrayMesh" id=12]
[ext_resource path="res://Assets/DungeonKit/banner.obj" type="ArrayMesh" id=13]
[ext_resource path="res://Assets/Effects/hint.wav" type="AudioStream" id=14]

[sub_resource type="Environment" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Barbarian"
loop = true
tracks/0/type = "transform"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, -9, 2.29, 4.656, 0, 0, 0, 1, 1, 1, 1, 1, 1, -9, 2.29, 4.656, 0, 0, 0, 1, 1, 1, 1 )

[sub_resource type="Animation" id=4]
resource_name = "Mage"
loop = true
tracks/0/type = "transform"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 9, 2.29, 4.656, 0, 0, 0, 1, 1, 1, 1, 1, 1, 9, 2.29, 4.656, 0, 0, 0, 1, 1, 1, 1 )

[sub_resource type="Animation" id=3]
resource_name = "Rogue"
loop = true
tracks/0/type = "transform"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 0, 2.29023, 4.65592, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 2.29023, 4.65592, 0, 0, 0, 1, 1, 1, 1 )

[node name="CharacterSelector" type="Spatial"]
script = ExtResource( 5 )

[node name="Rogue" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="Body" parent="Rogue/KayKit Animated Character" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="Head" parent="Rogue/KayKit Animated Character" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.711598, 0 )

[node name="ArmLeft" parent="Rogue/KayKit Animated Character" index="2"]
transform = Transform( 7.90754e-07, 0.471935, -0.881633, 0, -0.881633, -0.471935, -1, 3.73185e-07, -6.97155e-07, 0.14, 0.691598, 0 )

[node name="ArmRight" parent="Rogue/KayKit Animated Character" index="3"]
transform = Transform( 1.26759e-06, -0.471935, -0.881633, 0, -0.881633, 0.471935, -1, -5.98221e-07, -1.11755e-06, -0.14, 0.691598, 0 )

[node name="Barbarian" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 1.5, 0 )

[node name="Mage" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1.5, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="bottom_center" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/bottom_center"]
margin_left = -343.0
margin_top = -151.0
margin_right = 344.0
margin_bottom = -24.0

[node name="description" type="RichTextLabel" parent="CanvasLayer/bottom_center/Panel"]
margin_left = 13.0
margin_top = 10.0
margin_right = 678.0
margin_bottom = 119.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[b]Rogue[/b]
The Rogue can activate the [i]hide[/i] ability - this conceals the rogue's inventory from the opponents."
text = "Rogue
The Rogue can activate the hide ability - this conceals the rogue's inventory from the opponents."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select_left" type="Button" parent="CanvasLayer/bottom_center"]
margin_left = -402.0
margin_top = -100.0
margin_right = -358.0
margin_bottom = -62.0
text = " < "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select_right" type="Button" parent="CanvasLayer/bottom_center"]
margin_left = 357.0
margin_top = -100.0
margin_right = 375.0
margin_bottom = -62.0
text = " > "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top_center" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/top_center"]
margin_left = -108.0
margin_top = 5.0
margin_right = 93.0
margin_bottom = 126.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/top_center/Panel"]
margin_left = 6.0
margin_top = 6.0
margin_right = 194.0
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/top_center/Panel/MarginContainer"]
margin_right = 188.0
margin_bottom = 112.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/top_center/Panel/MarginContainer/VBoxContainer"]
margin_right = 188.0
margin_bottom = 34.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Player Name"
align = 1

[node name="player_name" type="LineEdit" parent="CanvasLayer/top_center/Panel/MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 188.0
margin_bottom = 74.0
theme = ExtResource( 6 )
text = "Player One"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="CanvasLayer/top_center/Panel/MarginContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 188.0
margin_bottom = 108.0
theme = ExtResource( 6 )
text = "Start Game"

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.29023, 4.65592 )
environment = SubResource( 1 )

[node name="SpotLight" type="SpotLight" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.669739, -1.77954 )
light_energy = 4.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera"]
autoplay = "Rogue"
anims/Barbarian = SubResource( 2 )
anims/Mage = SubResource( 4 )
anims/Rogue = SubResource( 3 )
blend_times = [ "Barbarian", "Barbarian", 0.5, "Barbarian", "Mage", 0.5, "Barbarian", "Rogue", 0.5, "Mage", "Barbarian", 0.5, "Mage", "Mage", 0.5, "Mage", "Rogue", 0.5, "Rogue", "Barbarian", 0.5, "Rogue", "Mage", 0.5, "Rogue", "Rogue", 0.5 ]

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 4 )
cell_size = Vector3( 4, 1, 4 )
data = {
"cells": PoolIntArray( 0, 0, 95, 1, 0, 95, 2, 0, 95, 3, 0, 95, 4, 0, 95, 65531, 0, 95, 65532, 0, 95, 65533, 0, 95, 65534, 0, 95, 65535, 0, 95, 65536, 65534, 108, 65537, 65534, 108, 65538, 65534, 108, 65539, 65534, 108, 65540, 65534, 108, 131068, 65534, 108, 131069, 65534, 108, 131070, 65534, 108, 131071, 65534, 108, 0, 65535, 95, 1, 65535, 95, 2, 65535, 95, 3, 65535, 95, 4, 65535, 95, 65531, 65535, 95, 65532, 65535, 95, 65533, 65535, 95, 65534, 65535, 95, 65535, 65535, 95, 65536, 65535, 121, 65537, 65535, 108, 65538, 65535, 121, 65539, 65535, 108, 65540, 65535, 121, 131067, 65535, 108, 131068, 65535, 121, 131069, 65535, 108, 131070, 65535, 121, 131071, 65535, 108, 327680, 65535, 108, 327681, 65535, 108, 327682, 65535, 108, 327683, 65535, 108, 327684, 65535, 108, 393211, 65535, 108, 393212, 65535, 108, 393213, 65535, 108, 393214, 65535, 108, 393215, 65535, 108 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 1, 0 )
}

[node name="bookcaseFilled" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.29513, 1.48262, -1.08459 )
mesh = ExtResource( 8 )
skeleton = NodePath("../Camera/AnimationPlayer")
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null

[node name="potA_decorated" type="MeshInstance" parent="bookcaseFilled"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.37049, -0.0282698, 0.222706 )
mesh = ExtResource( 9 )
material/0 = null
material/1 = null

[node name="potB_decorated" type="MeshInstance" parent="bookcaseFilled"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.7934, -0.00103045, 0.704678 )
mesh = ExtResource( 11 )
material/0 = null
material/1 = null

[node name="pots" type="MeshInstance" parent="bookcaseFilled"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.80887, -0.000983238, 1.42424 )
mesh = ExtResource( 7 )
material/0 = null

[node name="tableMedium" type="MeshInstance" parent="bookcaseFilled"]
transform = Transform( 0.844375, 0, -0.535753, 0, 1, 0, 0.535753, 0, 0.844375, -10.2298, -0.0010314, 1.29283 )
mesh = ExtResource( 12 )
material/0 = null

[node name="chair" type="MeshInstance" parent="bookcaseFilled/tableMedium"]
transform = Transform( 0.860573, 0, -0.509327, 0, 1, 0, 0.509327, 0, 0.860573, -0.263938, 7.15256e-07, 1.42535 )
mesh = ExtResource( 10 )
material/0 = null

[node name="banner" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.45741, 4.45501, -1.36556 )
mesh = ExtResource( 13 )
material/0 = null
material/1 = null
material/2 = null

[node name="banner2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.08839, 4.42637, -1.36556 )
mesh = ExtResource( 13 )
material/0 = null
material/1 = null
material/2 = null

[node name="banner3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.2875, 4.36087, -1.36551 )
mesh = ExtResource( 13 )
material/0 = null
material/1 = null
material/2 = null

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[connection signal="mouse_entered" from="CanvasLayer/bottom_center/select_left" to="." method="_on_button_hover"]
[connection signal="pressed" from="CanvasLayer/bottom_center/select_left" to="." method="_on_select_left_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/bottom_center/select_right" to="." method="_on_button_hover"]
[connection signal="pressed" from="CanvasLayer/bottom_center/select_right" to="." method="_on_select_right_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/top_center/Panel/MarginContainer/VBoxContainer/start" to="." method="_on_button_hover"]
[connection signal="pressed" from="CanvasLayer/top_center/Panel/MarginContainer/VBoxContainer/start" to="." method="_on_start_pressed"]

[editable path="Rogue"]
